--- a/portfolio.html
+++ b/portfolio.html
@@ -11,28 +11,30 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
-            <ul class="list">
-                <li>
-                    <a href="./index.html" class="site-nav list" >Студія</a>
+        <div class="conteiner main-nav">
+            <nav class="logo-nav">
+                <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
+                <ul class="site-nav list">
+                    <li class="item">
+                        <a href="" class="site-nav list-link" >Студія</a>
+                    </li>
+                    <li class="item">
+                        <a href="./portfolio.html" class="site-nav list-link">Портфоліо</a>
+                    </li>
+                    <li class="item"> 
+                        <a href="" class="site-nav list-link">Контакти</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="nav-contacts list">
+                <li class="item">
+                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
                 </li>
-                <li>
-                    <a href="./portfolio.html" class="site-nav list">Портфоліо</a>
-                </li>
-                <li>
-                    <a href="" class="site-nav list">Контакти</a>
+                <li class="item">
+                    <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
                 </li>
             </ul>
-        </nav>
-        <ul class="list">
-            <li>
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        </div>
     </header>
     <main>
         <div>
