--- a/portfolio.html
+++ b/portfolio.html
@@ -37,92 +37,110 @@
         </div>
     </header>
     <main>
-        <div>
-            <section>
-            <h1 class="h-two">Портфоліо</h1>
+        <div class="conteiner">
+            <section class="portfolio-core">
+                <h1 class="h-two hidden-adv">Портфоліо</h1>
                 <div>
-                    <h2 class="h-two">Фільтр</h2>
-                    <ul class="list">
-                        <li>
+                    <h2 class="h-two hidden-adv">Фільтр</h2>
+                    <ul class="butt-list">
+                        <li class="filter-list list">
                             <button type="button" class="filter-button list">Усі</button>
                         </li>
-                        <li>
+                        <li class="filter-list list">
                             <button type="button" class="filter-button list">Веб-сайт</button>
                         </li>
-                        <li>
+                        <li class="filter-list list">
                             <button type="button" class="filter-button list">Додатки</button>
                         </li>
-                        <li>
+                        <li class="filter-list list">
                             <button type="button" class="filter-button list">Дизайн</button>
                         </li>
-                        <li>
+                        <li class="filter-list list">
                             <button type="button" class="filter-button list">Маркетинг</button>
                         </li>
                     </ul>
                 </div>
                 <div>
-                    <ul class="list">
-                            <li>
+                    <ul class="card-set">
+                            <li class="card-item list">
                                 <a class="portfolio-link" href="">
-                                    <h3 class="h-three portfolio-list">Технокряк</h3>
-                                    <p class="portfolio-text">Веб-сайт</p>
                                     <img src="./images/Технокряк.jpg" alt="Ноутбук з картками членів команди" width="370">
+                                    <div class="card-inner">
+                                        <h3 class="h-three portfolio-list">Технокряк</h3>
+                                        <p class="portfolio-text">Веб-сайт</p>
+                                    </div>
                                 </a>
                             </li>
-                            <li>
+                            <li class="card-item list">
                                 <a class="portfolio-link" href="">
-                                    <h3 class="h-three portfolio-list">Постер New Orlean vs Golden Star</h3>
-                                    <p class="portfolio-text">Дизайн</p>
                                     <img src="./images/Постер.jpg" alt="Постер до баскетбольної гри" width="370">
+                                    <div class="card-inner">
+                                        <h3 class="h-three portfolio-list">Постер New Orlean vs Golden Star</h3>
+                                        <p class="portfolio-text">Дизайн</p>
+                                    </div>
                                 </a>
                             </li>
-                            <li>
-                                <a class="portfolio-link" href="">
-                                    <h3 class="h-three portfolio-list">Ресторан Seafood</h3>
-                                    <p class="portfolio-text">Додаток</p>
+                            <li class="card-item list">
+                                <a class="portfolio-link" href="">                                    
                                     <img src="./images/Ресторан_морської_їжі.jpg" alt="Лого ресторана з назвою та зображенням риби" width="370">
+                                    <div class="card-inner">
+                                        <h3 class="h-three portfolio-list">Ресторан Seafood</h3>
+                                        <p class="portfolio-text">Додаток</p>   
+                                    </div>
                                 </a>
                             </li>
-                            <li>
-                                <a class="portfolio-link" href="">
-                                    <h3 class="h-three portfolio-list">Проєкт Prime</h3>
-                                    <p class="portfolio-text">Маркетинг</p>
+                            <li class="card-item list">
+                                <a class="portfolio-link" href="">                                    
                                     <img src="./images/Навушники_проект_прайм.jpg" alt="Чорні навушники" width="370">
+                                    <div class="card-inner">
+                                        <h3 class="h-three portfolio-list">Проєкт Prime</h3>
+                                        <p class="portfolio-text">Маркетинг</p>
+                                    </div>
                                 </a>
                             </li>
-                            <li>
-                                <a class="portfolio-link" href="">
-                                    <h3 class="h-three portfolio-list">Проєкт Boxes</h3>
-                                    <p class="portfolio-text">Додаток</p>
+                            <li class="card-item list">
+                                <a class="portfolio-link" href="">                                    
                                     <img src="./images/Проєкт_коробки.jpg" alt="Дві невеликі коробки" width="370">
+                                    <div class="card-inner">
+                                        <h3 class="h-three portfolio-list">Проєкт Boxes</h3>
+                                        <p class="portfolio-text">Додаток</p>
+                                    </div>
                                 </a>
                             </li>
-                            <li>
-                                <a class="portfolio-link" href="">
-                                    <h3 class="h-three portfolio-list">Inspiration has no borders</h3>
-                                    <p class="portfolio-text">Веб-сайт</p>
+                            <li class="card-item list">
+                                <a class="portfolio-link" href="">                                    
                                     <img src="./images/Натхнення_без_меж.jpg" alt="Темний монітор з зображенням карти світу" width="370">
+                                    <div class="card-inner">
+                                        <h3 class="h-three portfolio-list">Inspiration has no borders</h3>
+                                        <p class="portfolio-text">Веб-сайт</p>
+                                    </div>
                                 </a>
                             </li>
-                            <li>
-                                <a class="portfolio-link" href="">
-                                    <h3 class="h-three portfolio-list">Видання Limited Edition</h3>
-                                    <p class="portfolio-text">Дизайн</p>
+                            <li class="card-item list">
+                                <a class="portfolio-link" href="">                                    
                                     <img src="./images/Обмежене_видання.jpg" alt="Розгорнутий журнал" width="370">
+                                    <div class="card-inner">
+                                        <h3 class="h-three portfolio-list">Видання Limited Edition</h3>
+                                        <p class="portfolio-text">Дизайн</p>
+                                    </div>
                                 </a>
                             </li>
-                            <li>
-                                <a class="portfolio-link" href="">
-                                    <h3 class="h-three portfolio-list">Проект Lab</h3>
-                                    <p class="portfolio-text">Маркетинг</p>
+                            <li class="card-item list">
+                                <a class="portfolio-link" href="">                                    
                                     <img src="./images/Проєкт_лаб.jpg" alt="Білий лейбл з назвою" width="370">
+                                    <div class="card-inner">
+                                        <h3 class="h-three portfolio-list">Проект Lab</h3>
+                                        <p class="portfolio-text">Маркетинг</p>
+                                    </div>
                                 </a>
                             </li>
-                            <li>
-                                <a class="portfolio-link" href="">
-                                    <h3 class="h-three portfolio-list">Growing Business</h3>
-                                    <p class="portfolio-text">Додаток</p>
+                            <li class="card-item list">
+                                <a class="portfolio-link" href="">                                    
                                     <img src="./images/Зростаючий_бізнес.jpg" alt="Ноутбук з відкритим додатком на екрані" width="370">
+                                    <div class="card-inner">
+                                        <h3 class="h-three portfolio-list">Growing Business</h3>
+                                        <p class="portfolio-text">Додаток</p>
+                                    </div>
                                 </a>
                             </li>
                             
@@ -132,13 +150,15 @@
             </section>
         </div>
     </main>
-    <footer>
-        <a href="./index.html" class="foot-logo"><span class="accent">Web</span>Studio</a>
-        <address >
-            <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv" target="_blank" class="foot-place foot-address">м. Київ, пр-т Лесі Українки, 26</a>           
-            <a href="mailto:info@devstudio.com" class="foot-address">info@devstudio.com</a>        
-            <a href="tel:+380961111111" class="foot-address">+38 096 111 11 11</a>
-        </address>
+    <footer class=" foot-cont">
+        <div class="conteiner strap">
+            <a href="./index.html" class="foot-logo"><span class="accent">Web</span>Studio</a>
+            <address class="address-foot">
+                <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80+%D0%9B%D0%B5%D1%81%D1%96+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858!16s%2Fg%2F1tctq5jv" target="_blank" class="foot-place foot-address">м. Київ, пр-т Лесі Українки, 26</a>           
+                <a href="mailto:info@devstudio.com" class="foot-address">info@devstudio.com</a>        
+                <a href="tel:+380961111111" class="foot-address">+38 096 111 11 11</a>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
